Add 'compare instances by id' tests