@@ -22,39 +22,49 @@ class TaskManagerTest {
     }
 
     // Проверьте, что экземпляры класса Task равны друг другу, если равен их id
-    // Не уверен, что я правильно понял идею проверки
     @Test
     public void taskInstancesAreEqualWhenTheirIdsEqual() {
-        Task task = new Task(1,"Задача 1", "Описание задачи 1", NEW);
+        Task task = taskManager.createTask(new Task(1,"Задача 1", "Описание задачи 1", NEW));
 
-        taskManager.createTask(task);
+        Task savedTask = taskManager.getAllTasks().getFirst();
+        int savedTaskId = taskManager.getAllTasks().getFirst().getId();
 
-        Task savedTask = taskManager.getTaskById(1);
-
-        assertEquals(task, savedTask, "Задачи не совпадают");
-        assertEquals(task.hashCode(), savedTask.hashCode(), "hashCode() задач не совпадает");
-        assertEquals(task.toString(), savedTask.toString(), "toString() задач не совпадает");
+        // Добавил сравнение id
+        assertEquals(task.getId(), savedTaskId, "Id исходной и записанной задач не совпадают");
+        assertEquals(task, savedTask, "Исходная и записанная задачи не совпадают");
+        assertEquals(task.hashCode(), savedTask.hashCode(),
+                "hashCode() исходной и записанной задач не совпадает");
+        assertEquals(task.toString(), savedTask.toString(),
+                "toString() исходной и записанной задач не совпадает");
     }
 
     // Проверьте, что наследники класса Task равны друг другу, если равен их id
-    // Не уверен, что я правильно понял идею проверки
     @Test
     public void epicInstancesAreEqualWhenTheirIdsEqual() {
-        Epic epic = new Epic(1,"Эпик 1", "Описание эпика 1");
-        Subtask subtask = new Subtask(1,"Позадача 1", "Описание подзадачи 1", NEW, 1);
+        Epic epic = taskManager.createEpic(new Epic(1,"Эпик 1", "Описание эпика 1"));
+        Subtask subtask = taskManager.createSubtask(
+                new Subtask(1,"Позадача 1", "Описание подзадачи 1", NEW, 1));
 
-        taskManager.createEpic(epic);
-        taskManager.createSubtask(subtask);
+        Epic savedEpic = taskManager.getAllEpics().getFirst();
+        Subtask savedSubtask = taskManager.getAllSubtasks().getFirst();
+        int savedEpicId = taskManager.getAllEpics().getFirst().getId();
+        int savedSubtaskId = taskManager.getAllSubtasks().getFirst().getId();
 
-        Epic savedEpic = taskManager.getEpicById(1);
-        Subtask savedSubtask = taskManager.getSubtaskById(1);
+        // Добавил сравнение id
+        assertEquals(epic.getId(), savedEpicId, "Id исходного и записанного эпиков не совпадают");
+        assertEquals(epic, savedEpic, "Исходный и записанный эпики не совпадают");
+        assertEquals(epic.hashCode(), savedEpic.hashCode(),
+                "hashCode() исходного и записанного эпиков не совпадает");
+        assertEquals(epic.toString(), savedEpic.toString(),
+                "toString() исходного и записанного эпиков не совпадает");
 
-        assertEquals(epic, savedEpic, "Эпики не совпадают");
-        assertEquals(epic.hashCode(), savedEpic.hashCode(), "hashCode() эпиков не совпадает");
-        assertEquals(epic.toString(), savedEpic.toString(), "toString() эпиков не совпадает");
-        assertEquals(subtask, savedSubtask, "Подзадачи не совпадают");
-        assertEquals(subtask.hashCode(), savedSubtask.hashCode(), "hashCode() подзадач не совпадает");
-        assertEquals(subtask.toString(), savedSubtask.toString(), "toString() подзадач не совпадает");
+        // Добавил сравнение id
+        assertEquals(subtask.getId(), savedSubtaskId, "Id исходной и записанной подзадач не совпадают");
+        assertEquals(subtask, savedSubtask, "Исходная и записанная подзадачи не совпадают");
+        assertEquals(subtask.hashCode(), savedSubtask.hashCode(),
+                "hashCode() исходной и записанной подзадач не совпадает");
+        assertEquals(subtask.toString(), savedSubtask.toString(),
+                "toString() исходной и записанной подзадач не совпадает");
     }
 
     // Проверьте, что объект Epic нельзя добавить в самого себя в виде подзадачи
@@ -66,32 +76,28 @@ class TaskManagerTest {
     // проинициализированные и готовые к работе экземпляры менеджеров;
     @Test
     public void shouldReturnInMemoryTaskManagerByDefault() {
-        TaskManager manager = Managers.getDefault();
 
-        assertNotNull(manager, "Task Manager не был создан");
-        assertInstanceOf(InMemoryTaskManager.class, manager,
+        assertNotNull(taskManager, "Task Manager не был создан");
+        assertInstanceOf(InMemoryTaskManager.class, taskManager,
                 "Менеджер возвращает неправильный класс");
     }
 
     @Test
     public void shouldReturnInMemoryHistoryManagerByDefault() {
-        HistoryManager manager = Managers.getDefaultHistory();
+        HistoryManager historyManager = Managers.getDefaultHistory();
 
-        assertNotNull(manager, "History manager не был создан");
-        assertInstanceOf(InMemoryHistoryManager.class, manager,
+        assertNotNull(historyManager, "History manager не был создан");
+        assertInstanceOf(InMemoryHistoryManager.class, historyManager,
                 "Менеджер возвращает неправильный класс");
     }
 
-    // проверьте, что InMemoryTaskManager действительно добавляет задачи разного типа и может найти их по id
+    // Проверьте, что InMemoryTaskManager действительно добавляет задачи разного типа и может найти их по id
     @Test
     public void taskManagerWorksWithVariousTaskTypesAndAbleToFindThemById() {
-        Task task = new Task(1, "Задача 1", "Описание задачи 1");
-        Epic epic = new Epic(1, "Эпик 1", "Описание эпика 1");
-        Subtask subtask = new Subtask(1, "Позадача 1", "Описание подзадачи 1", NEW, 1);
-
-        taskManager.createTask(task);
-        taskManager.createEpic(epic);
-        taskManager.createSubtask(subtask);
+        Task task = taskManager.createTask(new Task(1, "Задача 1", "Описание задачи 1"));
+        Epic epic = taskManager.createEpic(new Epic(1, "Эпик 1", "Описание эпика 1"));
+        Subtask subtask = taskManager.createSubtask(
+                new Subtask(1, "Позадача 1", "Описание подзадачи 1", NEW, 1));
 
         assertEquals(Task.class, taskManager.getTaskById(1).getClass(),
                 "Тип исходной задачи и сохранённой в менеджере не совпадают");
@@ -99,48 +105,41 @@ class TaskManagerTest {
                 "Тип исходной задачи и сохранённой в менеджере не совпадают");
         assertEquals(Subtask.class, taskManager.getSubtaskById(1).getClass(),
                 "Тип исходной задачи и сохранённой в менеджере не совпадают");
-        assertEquals(task.getId(), taskManager.getAllTasks().get(0).getId(),
+        assertEquals(task.getId(), taskManager.getAllTasks().getFirst().getId(),
                 "Id исходной задачи и сохранённой в менеджере не совпадают");
-        assertEquals(epic.getId(), taskManager.getAllEpics().get(0).getId(),
+        assertEquals(epic.getId(), taskManager.getAllEpics().getFirst().getId(),
                 "Id исходного эпика и сохранённого в менеджере не совпадают");
-        assertEquals(subtask.getId(), taskManager.getAllSubtasks().get(0).getId(),
+        assertEquals(subtask.getId(), taskManager.getAllSubtasks().getFirst().getId(),
                 "Id исходной подзадачи и сохранённой в менеджере не совпадают");
     }
 
-    // проверьте, что задачи с заданным id и сгенерированным id не конфликтуют внутри менеджера
+    // Проверьте, что задачи с заданным id и сгенерированным id не конфликтуют внутри менеджера
     @Test
     public void taskManagerShouldWorkWithIncomingIdsAndGeneratedIds() {
-        Task task1 = new Task( "Задача 1", "Описание задачи 1");
-        Task task2 = new Task(2, "Задача 2", "Описание задачи 2");
-
-        taskManager.createTask(task1);
-        taskManager.createTask(task2);
+        Task task1 = taskManager.createTask(new Task("Задача 1", "Описание задачи 1"));
+        Task task2 = taskManager.createTask(new Task(2, "Задача 2", "Описание задачи 2"));
 
         assertEquals(task1, taskManager.getTaskById(1), "Первая задача должна иметь идентификатор 1");
         assertEquals(task2, taskManager.getTaskById(2), "Вторая задача должна иметь идентификатор 2");
     }
 
-    // создайте тест, в котором проверяется неизменность задачи (по всем полям) при добавлении задачи в менеджер
+    // Создайте тест, в котором проверяется неизменность задачи (по всем полям) при добавлении задачи в менеджер
     @Test
     public void taskManagerShouldStoreTaskFieldsUnchanged() {
-        Task task = new Task(1,"Задача 1", "Описание задачи 1", NEW);
+        taskManager.createTask(new Task(1,"Задача 1", "Описание задачи 1", NEW));
 
-        taskManager.createTask(task);
-
-        assertEquals(task.getName(), taskManager.getTaskById(1).getName(),
+        assertEquals("Задача 1", taskManager.getTaskById(1).getName(),
                 "Неправильно сохраняется имя задачи");
-        assertEquals(task.getDescription(), taskManager.getTaskById(1).getDescription(),
+        assertEquals("Описание задачи 1", taskManager.getTaskById(1).getDescription(),
                 "Неправильно сохраняется описание задачи");
-        assertEquals(task.getStatus(), taskManager.getTaskById(1).getStatus(),
+        assertEquals(NEW, taskManager.getTaskById(1).getStatus(),
                 "Неправильно сохраняется статус задачи");
     }
 
-    // убедитесь, что задачи, добавляемые в HistoryManager, сохраняют предыдущую версию задачи и её данных.
+    // Убедитесь, что задачи, добавляемые в HistoryManager, сохраняют предыдущую версию задачи и её данных.
     @Test
     public void historyManagerStoresPreviousVersionsOfTasks() {
-        Task task = new Task("Задача 1", "Описание задачи 1", NEW);
-
-        taskManager.createTask(task);
+        taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
 
         taskManager.getTaskById(1);
 
@@ -159,11 +158,8 @@ class TaskManagerTest {
     // More Tests :)
     @Test
     void getAllTasks() {
-        Task task1 = new Task("Задача 1", "Описание задачи 1", NEW);
-        Task task2 = new Task("Задача 2", "Описание задачи 2", NEW);
-
-        taskManager.createTask(task1);
-        taskManager.createTask(task2);
+        Task task1 = taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
+        Task task2 = taskManager.createTask(new Task("Задача 2", "Описание задачи 2", NEW));
 
         List<Task> taskList = taskManager.getAllTasks();
 
@@ -174,11 +170,8 @@ class TaskManagerTest {
 
     @Test
     void getAllEpics() {
-        Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
-        Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
-
-        taskManager.createEpic(epic1);
-        taskManager.createEpic(epic2);
+        Epic epic1 = taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
+        Epic epic2 = taskManager.createEpic(new Epic("Эпик 2", "Описание эпика 2"));
 
         List<Epic> epicList = taskManager.getAllEpics();
 
@@ -190,11 +183,10 @@ class TaskManagerTest {
     @Test
     void getAllSubtasks() {
         taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
-        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
-        Subtask subtask2 = new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 1);
-
-        taskManager.createSubtask(subtask1);
-        taskManager.createSubtask(subtask2);
+        Subtask subtask1 = taskManager.createSubtask(
+                new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
+        Subtask subtask2 = taskManager.createSubtask(
+                new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 1));
 
         List<Subtask> subtaskList = taskManager.getAllSubtasks();
 
@@ -226,10 +218,9 @@ class TaskManagerTest {
 
     @Test
     void updateTaskWithNextTaskWithNullStatus() {
-        Task task1 = new Task("Задача 1", "Описание задачи 1", NEW);
+        taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
         Task task2 = new Task(1, "Задача 2", "Описание задачи 2", null);
 
-        taskManager.createTask(task1);
         taskManager.updateTask(task2);
 
         assertEquals(NEW, taskManager.getTaskById(1).getStatus(),
@@ -238,9 +229,8 @@ class TaskManagerTest {
 
     @Test
     void updateTaskWithNull() {
-        Task task = new Task("Задача 1", "Описание задачи 1", NEW);
+        Task task = taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
 
-        taskManager.createTask(task);
         taskManager.updateTask(null);
 
         assertEquals(task, taskManager.getTaskById(1), "Если передан null, задача не должна обновляться");
@@ -248,10 +238,9 @@ class TaskManagerTest {
 
     @Test
     void updateTaskWithWrongId() {
-        Task task1 = new Task("Задача 1", "Описание задачи 1", NEW);
+        Task task1 = taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
         Task task2 = new Task(2, "Задача 2", "Описание задачи 2", IN_PROGRESS);
 
-        taskManager.createTask(task1);
         taskManager.updateTask(task2);
 
         assertEquals(task1, taskManager.getTaskById(1), "Задача не должна изменяться");
@@ -260,10 +249,9 @@ class TaskManagerTest {
 
     @Test
     void updateEpicWithNextEpic() {
-        Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
         Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
 
-        taskManager.createEpic(epic1);
         taskManager.updateEpic(epic2);
 
         assertEquals("Эпик 1", taskManager.getEpicById(1).getName(),
@@ -274,9 +262,8 @@ class TaskManagerTest {
 
     @Test
     void updateEpicWithNull() {
-        Epic epic = new Epic("Эпик 1", "Описание эпика 1");
+        Epic epic = taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
 
-        taskManager.createEpic(epic);
         taskManager.updateEpic(null);
 
         assertEquals(epic, taskManager.getEpicById(1), "Если передан null, эпик не должен обновляться");
@@ -284,11 +271,10 @@ class TaskManagerTest {
 
     @Test
     void updateSubtaskWithNull() {
-        Epic epic = new Epic("Эпик 1", "Описание эпика 1");
-        Subtask subTask = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
+        Subtask subTask = taskManager.createSubtask(
+                new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
 
-        taskManager.createEpic(epic);
-        taskManager.createSubtask(subTask);
         taskManager.updateSubtask(null);
 
         assertEquals(subTask, taskManager.getSubtaskById(1),
@@ -297,13 +283,12 @@ class TaskManagerTest {
 
     @Test
     void updateSubtaskWithWrongId() {
-        Epic epic = new Epic("Эпик 1", "Описание эпика 1");
-        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
+        Subtask subtask1 = taskManager.createSubtask(
+                new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
         Subtask subtask2 = new Subtask(2, "Подзадача 2",
                 "Описание подзадачи 2", IN_PROGRESS, 1);
 
-        taskManager.createEpic(epic);
-        taskManager.createSubtask(subtask1);
         taskManager.updateSubtask(subtask2);
 
         assertEquals(subtask1, taskManager.getSubtaskById(1), "Подзадача не должна изменяться");
@@ -312,9 +297,8 @@ class TaskManagerTest {
 
     @Test
     void deleteTaskById() {
-        Task task = new Task("Задача 1", "Описание задачи 1", NEW);
+        taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
 
-        taskManager.createTask(task);
         taskManager.deleteTaskById(1);
 
         assertNull(taskManager.getTaskById(1), "Задача не была удалена");
@@ -322,9 +306,8 @@ class TaskManagerTest {
 
     @Test
     void deleteEpicById() {
-        Epic epic = new Epic("Эпик 1", "Описание эпика 1");
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
 
-        taskManager.createEpic(epic);
         taskManager.deleteEpicById(1);
 
         assertNull(taskManager.getEpicById(1), "Эпик не был удалён");
@@ -332,11 +315,9 @@ class TaskManagerTest {
 
     @Test
     void deleteSubtaskById() {
-        Epic epic = new Epic("Эпик 1", "Описание эпика 1");
-        Subtask subtask = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
+        taskManager.createSubtask(new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
 
-        taskManager.createEpic(epic);
-        taskManager.createSubtask(subtask);
         taskManager.deleteSubtaskById(1);
 
         assertNull(taskManager.getSubtaskById(1), "Подзадача не была удалена");
@@ -346,8 +327,8 @@ class TaskManagerTest {
 
     @Test
     void deleteTaskByWrongId() {
-        Task task = new Task("Задача 1", "Описание задачи 1", NEW);
-        taskManager.createTask(task);
+        Task task = taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
+
         taskManager.deleteTaskById(2);
 
         assertNull(taskManager.getTaskById(2), "Должен возвращаться null, если id не существует");
@@ -356,9 +337,8 @@ class TaskManagerTest {
 
     @Test
     void deleteEpicByWrongId() {
-        Epic epic = new Epic("Эпик 1", "Описание эпика 1");
+        Epic epic = taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
 
-        taskManager.createEpic(epic);
         taskManager.deleteEpicById(2);
 
         assertNull(taskManager.getEpicById(2), "Должен возвращаться null, если id не существует");
@@ -367,11 +347,10 @@ class TaskManagerTest {
 
     @Test
     void deleteSubtaskByWrongId() {
-        Epic epic = new Epic("Эпик 1", "Описание эпика 1");
-        Subtask subtask = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
+        Subtask subtask = taskManager.createSubtask(
+                new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
 
-        taskManager.createEpic(epic);
-        taskManager.createSubtask(subtask);
         taskManager.deleteSubtaskById(3);
 
         assertNull(taskManager.getSubtaskById(3), "Должен возвращаться null, если id не существует");
@@ -380,11 +359,9 @@ class TaskManagerTest {
 
     @Test
     void deleteAllTasks() {
-        Task task1 = new Task("Задача 1", "Описание задачи 1", NEW);
-        Task task2 = new Task("Задача 2", "Описание задачи 2", NEW);
+        taskManager.createTask(new Task("Задача 1", "Описание задачи 1", NEW));
+        taskManager.createTask(new Task("Задача 2", "Описание задачи 2", NEW));
 
-        taskManager.createTask(task1);
-        taskManager.createTask(task2);
         taskManager.deleteAllTasks();
 
         assertNull(taskManager.getTaskById(1), "Should be deleted");
@@ -394,15 +371,13 @@ class TaskManagerTest {
 
     @Test
     void deleteAllEpics() {
-        Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
-        Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
-        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
-        Subtask subtask2 = new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 2);
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
+        taskManager.createEpic(new Epic("Эпик 2", "Описание эпика 2"));
+        taskManager.createSubtask(
+                new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
+        taskManager.createSubtask(
+                new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 2));
 
-        taskManager.createEpic(epic1);
-        taskManager.createEpic(epic2);
-        taskManager.createSubtask(subtask1);
-        taskManager.createSubtask(subtask2);
         taskManager.deleteAllEpics();
 
         assertNull(taskManager.getEpicById(1), "Эпик должен быть удалён");
@@ -417,11 +392,9 @@ class TaskManagerTest {
 
     @Test
     void deleteAllSubtasks() {
-        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
-        Subtask subtask2 = new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 2);
+        taskManager.createSubtask(new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
+        taskManager.createSubtask(new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 2));
 
-        taskManager.createSubtask(subtask1);
-        taskManager.createSubtask(subtask2);
         taskManager.deleteAllSubtasks();
 
         assertNull(taskManager.getSubtaskById(1), "Подзадача должна быть удалена");
@@ -432,13 +405,9 @@ class TaskManagerTest {
 
     @Test
     void getSubtaskList() {
-        Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
-        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
-        Subtask subtask2 = new Subtask("Подзадача 2", "Описание подзадачи 1", NEW, 1);
-
-        taskManager.createEpic(epic1);
-        taskManager.createSubtask(subtask1);
-        taskManager.createSubtask(subtask2);
+        Epic epic1 = taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
+        taskManager.createSubtask(new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
+        taskManager.createSubtask(new Subtask("Подзадача 2", "Описание подзадачи 1", NEW, 1));
 
         List<Subtask> list = taskManager.getSubtaskList(epic1);
         assertEquals(2, list.size(), "Список подзадач должен содержать 2 элемента");
@@ -446,14 +415,11 @@ class TaskManagerTest {
 
     @Test
     void getSubtaskListFromEpicWithWrongId() {
-        Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
+        taskManager.createEpic(new Epic("Эпик 1", "Описание эпика 1"));
         Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
-        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1);
-        Subtask subtask2 = new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 1);
-
-        taskManager.createEpic(epic1);
-        taskManager.createSubtask(subtask1);
-        taskManager.createSubtask(subtask2);
+        taskManager.createSubtask(
+                new Subtask("Подзадача 1", "Описание подзадачи 1", NEW, 1));
+        taskManager.createSubtask(new Subtask("Подзадача 2", "Описание подзадачи 2", NEW, 1));
 
         assertNull(taskManager.getSubtaskList(epic2), "Должен возвращаться null");
     }
